-- version 1.1.3 (4/10/2004) --
1. Disabled the autolinker for now, as it's noticably broken.

-- version 1.1.2 (16/9/2004) --
1. Changed the cookie names to avoid conflicts with Squirrelmail.
2. Changed default charset to ISO-8859-1.
3. Added redirects after login and logout.

-- version 1.1.1a (15/9/2004) --
1. Fixed a bug in the sorting of the alternate themes. Hey, it was bugging me. :)

-- version 1.1.1 (15/9/2004) --
1. Changed authentication to allow broader Commission access.
2. Made the autolinker a bit smarter.
3. Added a link element to enable Firefox's live bookmark feature.
4. Removed the Welcome navbar item; it's extraneous and takes up space.
5. Fixed up the RSS feed URI generation. It was valid before, but the double slash was unsightly.
6. Cloned the two most popular non-default themes from 1.0.x in Black Gold and Blue Monday.

-- version 1.1.0 (14/9/2004) --
1. Changed all layout to be done through CSS.
2. Ported changes from 1.0.2 (1.1 was branched after 1.0.1).
3. Changed all markup to be XHTML.
4. Added theme credits to the about page.
5. Added calendar search functionality.
6. Made the search page accessible to guests.
7. Fixed a typo on the search page when no results are found.
8. Linked the section cells in the search results page to the appropriate section pages.
9. Added a page to prettify the change log.
10. Turned on block display on the links page.
11. Fixed the timeline block to show the correct year.
12. Reworked the theme code to allow for multiple theme selection.
13. Allowed stylesheet switching.
14. Removed themes that no longer work with the 1.1 code.
15. Added the Fold Out theme.
16. Added site configuration variables.
17. Added a welcome page and a news page.

-- version 1.0.2 (9/7/2003) --
1. First numbered release. (There were, in effect, two previous releases, which have been retrospectively numbered and listed below.)
2. Removed superfluous and misleading "Search Calendar" link in the calendar block.