@@ -1,0 +1,23 @@
+#title {
+	font-size: 200%;
+	font-weight: bold;
+	margin-bottom: 2ex;
+}
+
+#menu:before {
+	content: "Menu";
+	font-size: 200%;
+	font-weight: bold;
+}
+#menu {
+	font-weight: bold;
+	margin-bottom: 2ex;
+}
+
+#blocks {
+	display: none;
+}
+
+.fullwidth {
+	width: 100%;
+}
