@@ -1,5 +1,6 @@
 -- version 1.1.3 (4/10/2004) --
 1. Disabled the autolinker for now, as it's noticably broken.
+2. Added Good Text text-only theme.
 
 -- version 1.1.2 (16/9/2004) --
 1. Changed the cookie names to avoid conflicts with Squirrelmail.
